# image-processing-python

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
app/: main.py  pyproject.toml
app/core/: functions.py
app/scripts/: s3_upload.sh
